Update ClearProjectileCommand.java